# verifiers

./: .gitignore  .readthedocs.yaml  AGENTS.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: style.yml  sync-docs.yml  test.yml
configs/: endpoints.py
configs/prime-rl/: wiki-search.toml
configs/rl/: alphabet-sort.toml  reasoning-gym.toml  reverse-text.toml  tool-test.toml  wiki-search.toml  wordle.toml
configs/vf-rl/: continuation-quality.toml  gsm8k.toml  math-python.toml  math.toml  reasoning-gym.toml  reverse-text.toml  sentence-repeater.toml  wiki-search.toml  wordle.toml
docs/: README.md  docs.json  mint.json
docs/release/: RELEASE_v0.1.6.md  RELEASE_v0.1.7.post0.md  RELEASE_v0.1.8.md  TRAJECTORIES.md
docs/rtd-redirect/: index.html
docs/source/: api_reference.md  components.md  concepts.md  development.md  environments.md  evaluation.md  faqs.md  index.md  overview.md  training.md
environments/: README.md
environments/arc_agi/: README.md  arc_agi.py  pyproject.toml
environments/continuation_quality/: README.md  continuation_quality.py  pyproject.toml
environments/doublecheck/: README.md  doublecheck.py  pyproject.toml
environments/dummy_harbor_env/: README.md  dummy_harbor_env.py  pyproject.toml
environments/dummy_harbor_env/tasks/hello-world/: task.toml
environments/dummy_harbor_env/tasks/hello-world/environment/: Dockerfile
environments/dummy_harbor_env/tasks/hello-world/solution/: solve.sh
environments/gem_wordle/: README.md  gem_wordle.py  pyproject.toml
environments/gpqa/: gpqa.py
environments/gsm8k/: README.md  gsm8k.py  pyproject.toml
environments/math/: README.md  pyproject.toml
environments/math_group/: README.md  math_group.py  pyproject.toml
environments/math_python/: .env-metadata.json  README.md  math_python.py  pyproject.toml
environments/mcp_env/mcp_env/: __init__.py  mcp_env.py
environments/mcp_search_env/: README.md  mcp_search_env.py  pyproject.toml
environments/mmmu/: README.md
environments/reasoning_gym_env/: README.md  pyproject.toml  reasoning_gym_env.py
environments/reverse_text/: README.md  pyproject.toml  reverse_text.py
environments/self_reward/: README.md  self_reward.py
environments/sentence_repeater/: README.md  pyproject.toml  sentence_repeater.py
environments/simpleqa/: pyproject.toml  simpleqa.py
environments/tool_test/: README.md
environments/tool_test/outputs/evals/tool-test--gpt-4.1-mini/5cde0948/: metadata.json  results.jsonl
environments/toxicity_explanation/: README.md
environments/wiki_search/: .env-metadata.json  README.md  pyproject.toml  wiki_search.py
environments/wiki_search/outputs/evals/wiki-search--gpt-4.1-mini/052a81ae/: metadata.json  results.jsonl
environments/wiki_search/outputs/evals/wiki-search--gpt-4.1-mini/d057f808/: metadata.json  results.jsonl
environments/wiki_search/outputs/evals/wiki-search--gpt-4.1-nano/8d8aecd4/: metadata.json  results.jsonl
environments/wiki_search/outputs/evals/wiki-search--gpt-4.1/50519885/: metadata.json  results.jsonl
environments/wiki_search/outputs/evals/wiki-search--gpt-5-mini/dc83cc41/: metadata.json  results.jsonl
environments/wiki_search/outputs/evals/wiki-search--gpt-5-nano/9a37a8bd/: metadata.json  results.jsonl
environments/wiki_search/outputs/evals/wiki-search--qwen--qwen3-30b-a3b-instruct-2507/4d62a02d/: metadata.json  results.jsonl
environments/wiki_search/outputs/evals/wiki-search--qwen--qwen3-30b-a3b-instruct-2507/6c9b879e/: metadata.json  results.jsonl
environments/wiki_search/outputs/evals/wiki-search--qwen--qwen3-4b-instruct-2507/e762fd98/: metadata.json  results.jsonl
environments/wiki_search/outputs/evals/wiki-search--willcb--qwen3-4b-wiki-search/094df25d/: metadata.json  results.jsonl
environments/wordle/: README.md  pyproject.toml  wordle.py
environments/wordle/outputs/evals/wordle--gpt-4.1-mini/816ec3b0/: metadata.json  results.jsonl
environments/wordle/outputs/evals/wordle--gpt-5-mini/019a631c/: metadata.json  results.jsonl
environments/wordle/outputs/evals/wordle--qwen--qwen3-30b-a3b-thinking-2507/50bdff53/: metadata.json  results.jsonl
integrations/: README.md
notes/: RELEASE_v0.1.6.md  RELEASE_v0.1.6.post0.md  RELEASE_v0.1.7.md  RELEASE_v0.1.8.post0.md  RELEASE_v0.1.8.post1.md  RELEASE_v0.1.8.post2.md  TODOs.md  TRAJECTORIES.md  rollout_orchestration_refactor.md
scripts/: rl.py  sft.py
tests/: conftest.py  test_env_group.py  test_environment.py  test_environment_audio_modality.py  test_environment_extra.py  test_envs.py  test_eval_cli.py  test_eval_utils.py  test_math_rubric.py  test_multiturn_env.py  test_rlm.py  test_rlm_env.py  test_sandbox_env.py  test_singleturn_env.py  test_stateful_tool_env.py  test_tool_env.py  test_trajectory_processing.py
verifiers/: __init__.py  errors.py  types.py
verifiers/envs/: env_group.py  environment.py  multiturn_env.py  python_env.py  reasoninggym_env.py  sandbox_env.py  stateful_tool_env.py  textarena_env.py  tool_env.py
verifiers/envs/experimental/: README.md  gym_env.py  rlm_env.py
verifiers/parsers/: parser.py
verifiers/rl/trainer/: config.py  generator.py  orchestrator.py  trainer.py
verifiers/rubrics/: judge_rubric.py  math_rubric.py  rubric.py  rubric_group.py  tool_rubric.py
verifiers/scripts/: eval.py  prime_rl.py  rl.py  setup.py  tui.py
verifiers/utils/: async_utils.py  data_utils.py  eval_utils.py  logging_utils.py  message_utils.py  processing_utils.py  response_utils.py  retry_utils.py  token_utils.py
