[project]
name = "arc-agi"
description = "ARC-AGI (Abstraction and Reasoning Corpus) environment for abstract reasoning puzzles"
tags = ["arc-agi", "single-turn", "reasoning", "puzzles"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.2.post1",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["arc_agi.py"]
