[project]
name = "math-python"
description = "Solve math problems using Python in a sandbox environment"
tags = ["tool-use", "math", "sandbox", "train", "prime-sandboxes", "python", "coding"]
version = "0.1.9"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.8.post1",
    "math-verify>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
