[project]
name = "reasoning-gym-env"
description = "ReasoningGym suite of programmatically-generated reasoning tasks"
tags = ["reasoning-gym", "logic", "puzzles", "math", "train"]
version = "0.1.3"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.5.post0",
    "reasoning-gym",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["reasoning_gym_env.py"]
