[project]
name = "sentence-repeater"
description = "Interactively repeat sentences from a paragraph in a random order"
version = "0.1.1"
tags = ["sentence-repeater", "multi-turn", "train", "eval"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.8",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["sentence_repeater.py"]
