[project]
name = "wordle"
description = "Game environment for Wordle, built on top of TextArena"
tags = ["textarena", "multi-turn", "reasoning", "game", "train", "eval"]
version = "0.1.6"
dependencies = [
    "verifiers>=0.1.8",
    "nltk",
    "textarena",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["wordle.py"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 1
