[project]
name = "wordle"
description = "Wordle game environment"
tags = ["textarena", "multi-turn", "reasoning", "game", "train", "eval"]
version = "0.1.6"
dependencies = [
    "verifiers>=0.1.8",
    "nltk>=3.9.2",
    "textarena==0.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["wordle.py"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 1
